# django-htmx-live-trigger

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg
django_htmx_live_trigger/: __init__.py  apps.py  consumers.py
django_htmx_live_trigger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_htmx_live_trigger/static/django_htmx_live_trigger/js/: htmx-ws-events.js
