[metadata]
name = django-htmx-live-trigger
version = 0.2
description = Realtime updates in Django using HTMX and websockets.
long_description = file: README.rst
url = https://github.com/paulik123
author = Cornel Kenef
author_email = paul@2na.dev
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2
    channels >= 4.0
    daphne>=4.0.0
    django-redis>=5.0
    channels-redis>=4.0